[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pwntools"
version = "0.1.0"
description = "MCP server exposing pwntools 4.15.0 functionality"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = ["pwntools==4.15.0", "fastmcp"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "hatch", "pip-api"]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-asyncio", "hypothesis"]
lint = ["ruff", "mypy"]
mcp = ["fastmcp"]

[project.scripts]
mcp-pwntools = "mcp_pwntools.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-pwntools"
Repository = "https://github.com/daedalus/mcp-pwntools"
Issues = "https://github.com/daedalus/mcp-pwntools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pwntools"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_pwntools"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=79"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]